objects/LiteratureOrderItem__c.object
<CustomObject>
    <fields>
        <fullName>DispositionChanged__c</fullName>
        <description>DispositionChanged
date</description>
        <label>Disposition Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LiteratureInventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Literature Inventory</label>
        <referenceTo>LiteratureInventory__c</referenceTo>
        <relationshipLabel>Literature Order Items</relationshipLabel>
        <relationshipName>LiteratureOrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiteratureOrder__c</fullName>
        <label>Literature Order</label>
        <referenceTo>LiteratureOrder__c</referenceTo>
        <relationshipLabel>Literature Order Items</relationshipLabel>
        <relationshipName>LiteratureOrderItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderItemId__c</fullName>
        <description>OrderItemId
varchar2(50)</description>
        <externalId>true</externalId>
        <label>Order Item Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VendorOrderItemId__c</fullName>
        <description>VendorOrderItemId
char(20)</description>
        <label>Vendor Order Item Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <description>This contains the Order Items from Literature Fulfillment System (Nexttouch).</description>
    <label>Literature Order Item</label>
    <nameField>
        <displayFormat>LOI-{0000000000}</displayFormat>
        <label>Literature Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Literature Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>